--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,5 @@ RoxygenNote: 7.2.0
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+URL: https://github.com/masem-research/MetaDataVariables
+BugReports: https://github.com/masem-research/MetaDataVariables/issues
